--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,24 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.0'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id "org.sonarqube" version "4.0.0.2929"
+	id 'jacoco'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+
+sonar{
+
+properties{
+
+property 'sonar.projectName','dealsdate'
+//property 'sonar.token', 'sqp_6e6fb2bc39144a0c415ecb1e0a04102667c26a22'
+property 'sonar.login', 'admin'
+property 'sonar.password', 'admin@1'
+}
+}
 
 configurations {
 	compileOnly {
@@ -42,5 +55,61 @@ testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+
+useJUnitPlatform()
+
+finalizedBy jacocoTestReport
+
+}
+
+ 
+
+jacoco {
+
+toolVersion = "0.8.8"
+
+//reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+
+}
+
+ 
+
+jacocoTestReport {
+
+dependsOn test
+
+reports {
+
+xml.required = true
+
+//csv.required = false
+
+//html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+
+}
+
+finalizedBy jacocoTestCoverageVerification
+
+}
+
+ 
+
+jacocoTestCoverageVerification{
+
+violationRules{
+
+rule{
+
+enabled=true
+
+limit{
+
+minimum=0.25
+
+}
+
+}
+
+}
+
 }
